# obs-holyrics-integrator

./: pyproject.toml
obs/: gui.py  integrator_bridge.py  integrator_controller.py  main.py  message_bus.py  profile_manager.py
